--- a/.github/workflows/workflow_multi_source.yml
+++ b/.github/workflows/workflow_multi_source.yml
@@ -1,7 +1,7 @@
 name: Multi-Source Patent Search
 
 on:
-  workflow_dispatch:  # Manual trigger
+  workflow_dispatch:  # ✅ Manual trigger - click "Run workflow" button in GitHub Actions
   schedule:
     # Runs at 00:00 UTC on the 1st day of every 2nd month (Feb, Apr, Jun, Aug, Oct, Dec)
     - cron: '0 0 1 */2 *'
